New changes to title page

--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-h1{
+.hero-image{
+    background-image: url("./images/scotland-1987599_1280.jpg");
+    height: 352px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero-text{
+    color: whitesmoke;
+    position: absolute;
+    text-align: center;
+    top: 180px;
+    width: 100%;
     font-family: "Italiana", Garamond, Georgia, "Times New Roman", serif;
     font-size: 4rem;
 }
