--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.hero-image{
-    background-image: url("./images/scotland-1987599_1280.jpg");
+.hero-background{
+    background-color: burlywood;
     height: 352px;
     background-position: center;
     background-repeat: no-repeat;
@@ -7,11 +7,15 @@
 }
 
 .hero-text{
-    color: whitesmoke;
+    color: chocolate;
     position: absolute;
     text-align: center;
-    top: 180px;
+    top: 90px;
     width: 100%;
     font-family: "Italiana", Garamond, Georgia, "Times New Roman", serif;
     font-size: 4rem;
+}
+
+.image{
+    size: 50%;
 }
