--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+img{
+    width: 100%;
+    border-radius: 5px;
+}
+
 .hero-background{
     background-color: burlywood;
-    height: 352px;
+    height: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,12 +15,21 @@
     color: chocolate;
     position: absolute;
     text-align: center;
-    top: 90px;
+    top: 60px;
     width: 100%;
     font-family: "Italiana", Garamond, Georgia, "Times New Roman", serif;
     font-size: 4rem;
 }
 
-.image{
-    size: 50%;
+.two-column{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 50px;
+    width: 80%;
+    margin: auto;
+    margin-top: 40px;
+}
+
+.info{
+    font-size: 1.25em;
 }
