--- a/style.css
+++ b/style.css
@@ -11,8 +11,16 @@ img{
     background-size: cover;
 }
 
-.hero-text{
+h1{
+    color: brown;
+}
+
+p{
     color: chocolate;
+}
+
+.hero-text{
+    color: brown;
     position: absolute;
     text-align: center;
     top: 60px;
@@ -22,6 +30,7 @@ img{
 }
 
 .two-column{
+    background-color: beige;
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 50px;
