--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1{
 
 p{
     color: chocolate;
+    width: 90%;
 }
 
 .hero-text{
@@ -34,9 +35,10 @@ p{
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 50px;
-    width: 80%;
+    width: 100%;
+    height: 100%;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 0px;
 }
 
 .info{
