--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ img{
     border-radius: 5px;
 }
 
-.hero-background{
-    background-color: burlywood;
+.hero-image{
+    background-image: url("./Pizza Images/Screenshot\ 2025-07-31\ at\ 9.14.27\ am.png");
     height: 300px;
     background-position: center;
     background-repeat: no-repeat;
@@ -24,7 +24,7 @@ p{
     color: brown;
     position: absolute;
     text-align: center;
-    top: 60px;
+    top: 1%;
     width: 100%;
     font-family: "Italiana", Garamond, Georgia, "Times New Roman", serif;
     font-size: 4rem;
