Fixed hero image bug

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ img{
 }
 
 .hero-image{
-    background-image: url("./Pizza Images/Screenshot\ 2025-07-31\ at\ 9.14.27\ am.png");
+    background-image: url("./Pizza Images/Screenshot\ 2025-08-12\ at\ 1.56.47\ pm.png");
     height: 300px;
     background-position: center;
     background-repeat: no-repeat;
