final comments on code

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ footer {
     padding-right: 5px;
 }
 
+/* Ciao greeting image at title page */
 .secondary-image{
     height: 275px;
     width: 275px
